pkg/ast/y.output

state 0
	$accept: .query $end 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	query  goto 1
	expr  goto 2
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 1
	$accept:  query.$end 

	$end  accept
	.  error


state 2
	query:  expr.    (1)

	.  reduce 1 (src line 45)


state 3
	expr:  pipe.    (2)
	pipe:  pipe.PIPE or 

	PIPE  shift 22
	.  reduce 2 (src line 50)


state 4
	pipe:  or.    (3)
	or:  or.OROR and 

	OROR  shift 23
	.  reduce 3 (src line 55)


state 5
	or:  and.    (5)
	and:  and.ANDAND cmp 

	ANDAND  shift 24
	.  reduce 5 (src line 62)


state 6
	and:  cmp.    (7)
	cmp:  cmp.EQ add 
	cmp:  cmp.NEQ add 
	cmp:  cmp.LT add 
	cmp:  cmp.LE add 
	cmp:  cmp.GT add 
	cmp:  cmp.GE add 

	EQ  shift 25
	NEQ  shift 26
	LT  shift 27
	LE  shift 28
	GT  shift 29
	GE  shift 30
	.  reduce 7 (src line 68)


state 7
	cmp:  add.    (9)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 9 (src line 74)


state 8
	add:  mul.    (16)
	mul:  mul.STAR unary 
	mul:  mul.SLASH unary 
	mul:  mul.PERCENT unary 

	STAR  shift 33
	SLASH  shift 34
	PERCENT  shift 35
	.  reduce 16 (src line 85)


state 9
	mul:  unary.    (19)

	.  reduce 19 (src line 92)


state 10
	unary:  post.    (23)
	post:  post.DOT IDENT 
	post:  post.LBRACK expr RBRACK 
	post:  post.LBRACK expr COLON expr RBRACK 

	DOT  shift 36
	LBRACK  shift 37
	.  reduce 23 (src line 100)


state 11
	unary:  MINUS.unary 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	unary  goto 38
	post  goto 10
	atom  goto 13

state 12
	unary:  OVER.unary 
	unary:  OVER.unary ARROW LPAREN expr RPAREN 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	unary  goto 39
	post  goto 10
	atom  goto 13

state 13
	post:  atom.    (27)

	.  reduce 27 (src line 108)


state 14
	post:  IDENT.LPAREN RPAREN 
	post:  IDENT.LPAREN arg_list RPAREN 
	atom:  IDENT.    (35)

	LPAREN  shift 40
	.  reduce 35 (src line 124)


state 15
	atom:  NUMBER.    (36)

	.  reduce 36 (src line 126)


state 16
	atom:  STRING.    (37)

	.  reduce 37 (src line 130)


state 17
	atom:  TRUE.    (38)

	.  reduce 38 (src line 131)


state 18
	atom:  FALSE.    (39)

	.  reduce 39 (src line 132)


state 19
	atom:  NULL.    (40)

	.  reduce 40 (src line 133)


state 20
	atom:  DOT.    (41)

	.  reduce 41 (src line 134)


state 21
	atom:  LPAREN.expr RPAREN 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	expr  goto 41
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 22
	pipe:  pipe PIPE.or 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	or  goto 42
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 23
	or:  or OROR.and 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	and  goto 43
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 24
	and:  and ANDAND.cmp 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	cmp  goto 44
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 25
	cmp:  cmp EQ.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 45
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 26
	cmp:  cmp NEQ.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 46
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 27
	cmp:  cmp LT.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 47
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 28
	cmp:  cmp LE.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 48
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 29
	cmp:  cmp GT.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 49
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 30
	cmp:  cmp GE.add 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	add  goto 50
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 31
	add:  add PLUS.mul 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	mul  goto 51
	unary  goto 9
	post  goto 10
	atom  goto 13

state 32
	add:  add MINUS.mul 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	mul  goto 52
	unary  goto 9
	post  goto 10
	atom  goto 13

state 33
	mul:  mul STAR.unary 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	unary  goto 53
	post  goto 10
	atom  goto 13

state 34
	mul:  mul SLASH.unary 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	unary  goto 54
	post  goto 10
	atom  goto 13

state 35
	mul:  mul PERCENT.unary 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	unary  goto 55
	post  goto 10
	atom  goto 13

state 36
	post:  post DOT.IDENT 

	IDENT  shift 56
	.  error


state 37
	post:  post LBRACK.expr RBRACK 
	post:  post LBRACK.expr COLON expr RBRACK 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	expr  goto 57
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 38
	unary:  MINUS unary.    (24)

	.  reduce 24 (src line 102)


39: shift/reduce conflict (shift 58(0), red'n 25(0)) on ARROW
state 39
	unary:  OVER unary.    (25)
	unary:  OVER unary.ARROW LPAREN expr RPAREN 

	ARROW  shift 58
	.  reduce 25 (src line 103)


state 40
	post:  IDENT LPAREN.RPAREN 
	post:  IDENT LPAREN.arg_list RPAREN 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	RPAREN  shift 59
	OVER  shift 12
	.  error

	expr  goto 61
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13
	arg_list  goto 60

state 41
	atom:  LPAREN expr.RPAREN 

	RPAREN  shift 62
	.  error


state 42
	pipe:  pipe PIPE or.    (4)
	or:  or.OROR and 

	OROR  shift 23
	.  reduce 4 (src line 57)


state 43
	or:  or OROR and.    (6)
	and:  and.ANDAND cmp 

	ANDAND  shift 24
	.  reduce 6 (src line 64)


state 44
	and:  and ANDAND cmp.    (8)
	cmp:  cmp.EQ add 
	cmp:  cmp.NEQ add 
	cmp:  cmp.LT add 
	cmp:  cmp.LE add 
	cmp:  cmp.GT add 
	cmp:  cmp.GE add 

	EQ  shift 25
	NEQ  shift 26
	LT  shift 27
	LE  shift 28
	GT  shift 29
	GE  shift 30
	.  reduce 8 (src line 70)


state 45
	cmp:  cmp EQ add.    (10)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 10 (src line 76)


state 46
	cmp:  cmp NEQ add.    (11)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 11 (src line 77)


state 47
	cmp:  cmp LT add.    (12)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 12 (src line 78)


state 48
	cmp:  cmp LE add.    (13)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 13 (src line 79)


state 49
	cmp:  cmp GT add.    (14)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 14 (src line 80)


state 50
	cmp:  cmp GE add.    (15)
	add:  add.PLUS mul 
	add:  add.MINUS mul 

	PLUS  shift 31
	MINUS  shift 32
	.  reduce 15 (src line 81)


state 51
	add:  add PLUS mul.    (17)
	mul:  mul.STAR unary 
	mul:  mul.SLASH unary 
	mul:  mul.PERCENT unary 

	STAR  shift 33
	SLASH  shift 34
	PERCENT  shift 35
	.  reduce 17 (src line 87)


state 52
	add:  add MINUS mul.    (18)
	mul:  mul.STAR unary 
	mul:  mul.SLASH unary 
	mul:  mul.PERCENT unary 

	STAR  shift 33
	SLASH  shift 34
	PERCENT  shift 35
	.  reduce 18 (src line 88)


state 53
	mul:  mul STAR unary.    (20)

	.  reduce 20 (src line 94)


state 54
	mul:  mul SLASH unary.    (21)

	.  reduce 21 (src line 95)


state 55
	mul:  mul PERCENT unary.    (22)

	.  reduce 22 (src line 96)


state 56
	post:  post DOT IDENT.    (28)

	.  reduce 28 (src line 110)


state 57
	post:  post LBRACK expr.RBRACK 
	post:  post LBRACK expr.COLON expr RBRACK 

	RBRACK  shift 63
	COLON  shift 64
	.  error


state 58
	unary:  OVER unary ARROW.LPAREN expr RPAREN 

	LPAREN  shift 65
	.  error


state 59
	post:  IDENT LPAREN RPAREN.    (31)

	.  reduce 31 (src line 113)


state 60
	post:  IDENT LPAREN arg_list.RPAREN 
	arg_list:  arg_list.COMMA expr 

	RPAREN  shift 66
	COMMA  shift 67
	.  error


state 61
	arg_list:  expr.    (33)

	.  reduce 33 (src line 118)


state 62
	atom:  LPAREN expr RPAREN.    (42)

	.  reduce 42 (src line 135)


state 63
	post:  post LBRACK expr RBRACK.    (29)

	.  reduce 29 (src line 111)


state 64
	post:  post LBRACK expr COLON.expr RBRACK 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	expr  goto 68
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 65
	unary:  OVER unary ARROW LPAREN.expr RPAREN 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	expr  goto 69
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 66
	post:  IDENT LPAREN arg_list RPAREN.    (32)

	.  reduce 32 (src line 114)


state 67
	arg_list:  arg_list COMMA.expr 

	IDENT  shift 14
	NUMBER  shift 15
	STRING  shift 16
	TRUE  shift 17
	FALSE  shift 18
	NULL  shift 19
	MINUS  shift 11
	DOT  shift 20
	LPAREN  shift 21
	OVER  shift 12
	.  error

	expr  goto 70
	pipe  goto 3
	or  goto 4
	and  goto 5
	cmp  goto 6
	add  goto 7
	mul  goto 8
	unary  goto 9
	post  goto 10
	atom  goto 13

state 68
	post:  post LBRACK expr COLON expr.RBRACK 

	RBRACK  shift 71
	.  error


state 69
	unary:  OVER unary ARROW LPAREN expr.RPAREN 

	RPAREN  shift 72
	.  error


state 70
	arg_list:  arg_list COMMA expr.    (34)

	.  reduce 34 (src line 120)


state 71
	post:  post LBRACK expr COLON expr RBRACK.    (30)

	.  reduce 30 (src line 112)


state 72
	unary:  OVER unary ARROW LPAREN expr RPAREN.    (26)

	.  reduce 26 (src line 104)


33 terminals, 13 nonterminals
43 grammar rules, 73/16000 states
1 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 145/240000
67 extra closures
284 shift entries, 1 exceptions
34 goto entries
112 entries saved by goto default
Optimizer space used: output 85/240000
85 table entries, 3 zero
maximum spread: 32, maximum offset: 67
